2003-09-01  Shaun McCance  <shaunm@wolfram.com>

	* configure.in: Version 2.3.90

2003-08-26  Shaun McCance  <shaunm@wolfram.com>

	* README: Updated README so it's correct

2003-08-18  Shaun McCance  <shaunm@wolfram.com>

	* src/yelp-window.c: declare variables at top of block

2003-08-18  Jakub Steiner <jimmac@ximian.com>

	* stylesheets/docbook/*.png: provide nicer, gnome2-styled images

2003-08-15  Mikael Hallendal  <micke@imendio.com>

        * src/GNOME_Yelp.server.in: Replaced yelp-base for yelp. Not sure what
          should be in there really... Might fix bug #119764

	* src/yelp-window.c: (window_init), (window_configure_cb):
        - Save size from last window. Patch by Shaun McCance.
        - Fixes bug #90451

	* configure.in: 
        - Applied patch from Steve Chaplin that fixes the CFLAGS.
        - Fixes bug #118984

	* src/yelp-main.c: 
        (main_restore_session): Return FALSE, otherwise we'll try to start Yelp
          from the session over and over again. Reported by Jody earlier.

2003-08-14  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ne" to ALL_LINGUAS.

2003-08-13  Shaun McCance  <shaunm@wolfram.com>

	* src/yelp-view-toc.c
	- Re-added a closing ul tag that was accidentally removed

2003-08-12  Mikael Hallendal  <micke@imendio.com>

        * Release 2.3.6

	* NEWS: Updated for 2.3.6
	* configure.in: Bumped to 2.3.6

	* data/images/bcg.png: 
	- Replace image for one with transparent background.
	* src/yelp-view-toc.c: 
	- Remove the spacer padding image
	- Both these should finally fix bug #89838. Patches from Shaun McCance.

2003-07-30 John Fleck <jfleck@inkstain.net>

	* src/info2html/html.c
	- patch from Shaun re bug #89838

2003-07-24  Shaun McCance  <shaunm@wolfram.com>

	* src/yelp-db2html.c:
	- Change parameters passed to stylesheets.

2003-07-15 John Fleck <jfleck@inkstain.net>

	* configure.in: version 2.3.4

2003-07-08  Anders Carlsson  <andersca@codefactory.se>

	* configure.in:
	* src/Makefile.am: